--- a/client/index.html
+++ b/client/index.html
@@ -24,18 +24,7 @@
     <script>
       const theme = localStorage.getItem('color-theme');
       const loadingContainerStyle = document.createElement('style');
-      let backgroundColor;
-
-      if (theme === 'dark') {
-        backgroundColor = '#0d0d0d';
-      } else if (theme === 'light') {
-        backgroundColor = '#F8F4EB';
-      } else if (theme === 'system') {
-        const prefersDarkScheme = window.matchMedia('(prefers-color-scheme: dark)').matches;
-        backgroundColor = prefersDarkScheme ? '#0d0d0d' : '#ffffff';
-      } else {
-        backgroundColor = '#F8F4EB';
-      }
+      let backgroundColor = '#F8F4EB';
 
       loadingContainerStyle.innerHTML = `
         #loading-container {
